# information_gradient

./: .gitignore  CITATION.cff  README.md  pyproject.toml
A_optimization/: alphaA_optim_uncond_simple.py  optim_I_vs_iter_simple.npz
Gaussian_analytical/: I_vs_alpha_linear_gaussian.xbb  dIdalpha_vs_alpha_linear_gaussian.xbb  vi_a_1d_gaussian_experiment.py  vi_a_1d_gaussian_results.npz
Gaussian_linear/: alpha_vs_info_gradient_DSM.xbb  alpha_vs_info_gradient_dsm.py
Gaussian_linear_per_alpha/: alpha_vs_info_gradient_DSM_no_cond.npz  alpha_vs_info_gradient_dsm_no_cond.py
info_bottleneck/: ib_linear_gaussian_task_opt_dsm_both.py
info_bottleneck/outputs_ib_both_dsm/: history.json  matrices.pt
tanh_optimization/: optim_MI_tanhA_vs_iter.npz  tanhA_mi_kde.py  tanhA_optim_uncond_sfb.py
